--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <div class="container">
         <h1>Number Guess Challenge</h1>
         <p class="game_description">
-            "Number Guess Challenge" is a fun game where you guess a secret number. Starting with a score of 100, each incorrect guess deducts 1 point. The goal is to guess correctly with as few attempts as possible to maintain a high score. Can you achieve a perfect score?
+            "Number Guess Challenge" is a fun game where you guess a secret number. Starting with a score of 10, each incorrect guess deducts 1 point. The goal is to guess correctly with as few attempts as possible to maintain a high score. Can you achieve a perfect score?
         </p>
-        <p class="Score_board">Score: <span id="Score">100</span></p>
+        <p class="Score_board">Score: <span id="Score">10</span></p>
         <p class="message">Hi, Best Of Luck</p>
         <div class="game">
-            <label for="guess" class="guess_label">Enter Your Number:</label>
+            <label for="guess" class="guess_label">Enter Your Number Between 0 to 10:</label>
             <input type="number" name="guess_number" id="guess" placeholder="Your Number" required/>
             <button id="check" onclick="checkTheNumber()">Check</button>
         </div>
